--- a/notebooks/03-textmining-fivethirtyeight.ipynb
+++ b/notebooks/03-textmining-fivethirtyeight.ipynb
@@ -375,35 +375,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [20], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Check your code\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39massert\u001b[39;00m df_fte\u001b[39m.\u001b[39miloc[\u001b[39m0\u001b[39m, \u001b[39m2\u001b[39m] \u001b[39m==\u001b[39m [\u001b[39m'\u001b[39m\u001b[39mpolitics\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      3\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mpodcast\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      4\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mwhy\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mdemocrats\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mbeat\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      7\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mhistorical\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      8\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mtrends\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      9\u001b[0m  \u001b[39m'\u001b[39m\u001b[39min\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "# Check your code\n",
-    "assert df_fte.iloc[0, 2] == ['politics',\n",
-    " 'podcast',\n",
-    " 'why',\n",
-    " 'democrats',\n",
-    " 'beat',\n",
-    " 'historical',\n",
-    " 'trends',\n",
-    " 'in']"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -489,44 +460,6 @@
    "outputs": [],
    "source": [
     "df_fte['text_token_s'] = df_fte['text_token'].apply(lambda x: [i for i in x if i not in stopwords])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'df' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [27], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# Check your code\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39massert\u001b[39;00m df\u001b[39m.\u001b[39miloc[\u001b[39m1\u001b[39m,\u001b[39m3\u001b[39m] \u001b[39m==\u001b[39m [\u001b[39m'\u001b[39m\u001b[39muk\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      3\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mprime\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      4\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mminister\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      5\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mliz\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      6\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mtruss\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      7\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mquits\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      8\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mdisastrous\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m      9\u001b[0m  \u001b[39m'\u001b[39m\u001b[39msix\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     10\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mweeks\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     11\u001b[0m  \u001b[39m'\u001b[39m\u001b[39moffice\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     12\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mputting\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     13\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mcourse\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     14\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mbritain\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     15\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mshortest\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     16\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mserving\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     17\u001b[0m  \u001b[39m'\u001b[39m\u001b[39mleader\u001b[39m\u001b[39m'\u001b[39m,\n\u001b[0;32m     18\u001b[0m  \u001b[39m'\u001b[39m\u001b[39m0o0xqscrxi\u001b[39m\u001b[39m'\u001b[39m]\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'df' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "# Check your code\n",
-    "assert df.iloc[1,3] == ['uk',\n",
-    " 'prime',\n",
-    " 'minister',\n",
-    " 'liz',\n",
-    " 'truss',\n",
-    " 'quits',\n",
-    " 'disastrous',\n",
-    " 'six',\n",
-    " 'weeks',\n",
-    " 'office',\n",
-    " 'putting',\n",
-    " 'course',\n",
-    " 'britain',\n",
-    " 'shortest',\n",
-    " 'serving',\n",
-    " 'leader',\n",
-    " '0o0xqscrxi']"
    ]
   },
   {
@@ -636,28 +569,6 @@
    "outputs": [],
    "source": [
     "df_fte['text_si'] = df_fte['text_token_s'].apply(lambda x: ' '.join([i for i in x if len(i)>2]))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [30], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# check you code\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[39massert\u001b[39;00m df_fte\u001b[39m.\u001b[39miloc[\u001b[39m1\u001b[39m, \u001b[39m4\u001b[39m] \u001b[39m==\u001b[39m \u001b[39m'\u001b[39m\u001b[39mprime minister liz truss quits disastrous six weeks office putting course britain shortest serving leader 0o0xqscrxi\u001b[39m\u001b[39m'\u001b[39m\n",
-      "\u001b[1;31mAssertionError\u001b[0m: "
-     ]
-    }
-   ],
-   "source": [
-    "# check you code\n",
-    "assert df_fte.iloc[1, 4] == 'prime minister liz truss quits disastrous six weeks office putting course britain shortest serving leader 0o0xqscrxi'"
    ]
   },
   {
@@ -1084,16 +995,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Check your code\n",
-    "assert top_3 == [('election', 24), ('house', 22), ('senate', 20)]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 51,
    "metadata": {},
    "outputs": [
@@ -1474,7 +1375,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('nlp')",
+   "display_name": "Python 3.9.13 ('ds')",
    "language": "python",
    "name": "python3"
   },
@@ -1493,7 +1394,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "862b85cbd7ada3e4c92ca43595327580821000fa3c222eab11c0d4e1945dd12b"
+    "hash": "b0d598f3b30c8fa8aa5bf08ab98be9e00925507cb67bf1075654e4987281a8d4"
    }
   }
  },
