--- a/notebooks/04-data-exploration.ipynb
+++ b/notebooks/04-data-exploration.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
        "DataTransformerRegistry.enable('default')"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -299,7 +299,7 @@
        "[5 rows x 22 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +697,7 @@
        "[96 rows x 22 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,7 +717,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -783,19 +783,19 @@
      "text": [
       "mean of goals_scored is 3.765007916666667\n",
       "median of goals_scored is 3.3691899999999997\n",
-      "std of goals_scored is 1.8990114467474173\n"
+      "std of goals_scored is 1.9\n"
      ]
     }
    ],
    "source": [
     "df_world_cup['goals_scored'].mean()\n",
-    "print(f\"mean of goals_scored is {df_world_cup['goals_scored'].mean()}\")\n",
+    "print(f\"mean of goals_scored is {df_world_cup['goals_scored'].mean().round(2)}\")\n",
     "\n",
     "df_world_cup['goals_scored'].median()\n",
-    "print(f\"median of goals_scored is {df_world_cup['goals_scored'].median()}\")\n",
+    "print(f\"median of goals_scored is {df_world_cup['goals_scored'].median().round(2)}\")\n",
     "\n",
     "df_world_cup['goals_scored'].std().round(2)\n",
-    "print(f\"std of goals_scored is {df_world_cup['goals_scored'].std()}\")"
+    "print(f\"std of goals_scored is {df_world_cup['goals_scored'].std().round(2)}\")"
    ]
   },
   {
@@ -1084,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1429,7 +1429,7 @@
        "[10 rows x 22 columns]"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1443,7 +1443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1540,7 +1540,7 @@
        "36     Portugal       6.03842"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1552,20 +1552,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/html": [
        "\n",
-       "<div id=\"altair-viz-bea59bf42b534ba2bf20a7adf3d1b9a3\"></div>\n",
+       "<div id=\"altair-viz-5d5eaab6a41e44ee8986ffc4b53cb5bc\"></div>\n",
        "<script type=\"text/javascript\">\n",
        "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
        "  (function(spec, embedOpt){\n",
        "    let outputDiv = document.currentScript.previousElementSibling;\n",
-       "    if (outputDiv.id !== \"altair-viz-bea59bf42b534ba2bf20a7adf3d1b9a3\") {\n",
-       "      outputDiv = document.getElementById(\"altair-viz-bea59bf42b534ba2bf20a7adf3d1b9a3\");\n",
+       "    if (outputDiv.id !== \"altair-viz-5d5eaab6a41e44ee8986ffc4b53cb5bc\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-5d5eaab6a41e44ee8986ffc4b53cb5bc\");\n",
        "    }\n",
        "    const paths = {\n",
        "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
@@ -1618,7 +1618,7 @@
        "alt.Chart(...)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1657,7 +1657,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f5d85fd4da11c394a1b477327f9ee0b3c9c4a1e03813bd6725878b08e2581925"
+    "hash": "b0d598f3b30c8fa8aa5bf08ab98be9e00925507cb67bf1075654e4987281a8d4"
    }
   }
  },
