adding interactive scatter plot

--- a/notebooks/04-data-exploration.ipynb
+++ b/notebooks/04-data-exploration.ipynb
@@ -774,15 +774,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mean of goals_scored is 3.765007916666667\n",
-      "median of goals_scored is 3.3691899999999997\n",
+      "mean of goals_scored is 3.77\n",
+      "median of goals_scored is 3.37\n",
       "std of goals_scored is 1.9\n"
      ]
     }
@@ -1633,6 +1633,129 @@
     "    y=alt.Y('team:N', sort='-x'),\n",
     "    color='team',\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Interactive scatter plot: Defense and offense per country\n",
+    "\n",
+    "The interactive scatter plot shows the correlation between the gobal defense and offense of each country. Hovering over a point shows the name of the team."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# new df with relevant data only\n",
+    "\n",
+    "df_newest_date = df_world_cup[df_world_cup['forecast_timestamp'] == '2022-11-28 20:59:50 UTC'] # newest data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_do_group = df_newest_date[[\"team\", \"group\", \"global_o\", \"global_d\", \"spi\"]] # only team, group\", global_o, global_d and spi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "<div id=\"altair-viz-f6618c1f07444c5f9bc4f83dcb7d9609\"></div>\n",
+       "<script type=\"text/javascript\">\n",
+       "  var VEGA_DEBUG = (typeof VEGA_DEBUG == \"undefined\") ? {} : VEGA_DEBUG;\n",
+       "  (function(spec, embedOpt){\n",
+       "    let outputDiv = document.currentScript.previousElementSibling;\n",
+       "    if (outputDiv.id !== \"altair-viz-f6618c1f07444c5f9bc4f83dcb7d9609\") {\n",
+       "      outputDiv = document.getElementById(\"altair-viz-f6618c1f07444c5f9bc4f83dcb7d9609\");\n",
+       "    }\n",
+       "    const paths = {\n",
+       "      \"vega\": \"https://cdn.jsdelivr.net/npm//vega@5?noext\",\n",
+       "      \"vega-lib\": \"https://cdn.jsdelivr.net/npm//vega-lib?noext\",\n",
+       "      \"vega-lite\": \"https://cdn.jsdelivr.net/npm//vega-lite@4.17.0?noext\",\n",
+       "      \"vega-embed\": \"https://cdn.jsdelivr.net/npm//vega-embed@6?noext\",\n",
+       "    };\n",
+       "\n",
+       "    function maybeLoadScript(lib, version) {\n",
+       "      var key = `${lib.replace(\"-\", \"\")}_version`;\n",
+       "      return (VEGA_DEBUG[key] == version) ?\n",
+       "        Promise.resolve(paths[lib]) :\n",
+       "        new Promise(function(resolve, reject) {\n",
+       "          var s = document.createElement('script');\n",
+       "          document.getElementsByTagName(\"head\")[0].appendChild(s);\n",
+       "          s.async = true;\n",
+       "          s.onload = () => {\n",
+       "            VEGA_DEBUG[key] = version;\n",
+       "            return resolve(paths[lib]);\n",
+       "          };\n",
+       "          s.onerror = () => reject(`Error loading script: ${paths[lib]}`);\n",
+       "          s.src = paths[lib];\n",
+       "        });\n",
+       "    }\n",
+       "\n",
+       "    function showError(err) {\n",
+       "      outputDiv.innerHTML = `<div class=\"error\" style=\"color:red;\">${err}</div>`;\n",
+       "      throw err;\n",
+       "    }\n",
+       "\n",
+       "    function displayChart(vegaEmbed) {\n",
+       "      vegaEmbed(outputDiv, spec, embedOpt)\n",
+       "        .catch(err => showError(`Javascript Error: ${err.message}<br>This usually means there's a typo in your chart specification. See the javascript console for the full traceback.`));\n",
+       "    }\n",
+       "\n",
+       "    if(typeof define === \"function\" && define.amd) {\n",
+       "      requirejs.config({paths});\n",
+       "      require([\"vega-embed\"], displayChart, err => showError(`Error loading script: ${err.message}`));\n",
+       "    } else {\n",
+       "      maybeLoadScript(\"vega\", \"5\")\n",
+       "        .then(() => maybeLoadScript(\"vega-lite\", \"4.17.0\"))\n",
+       "        .then(() => maybeLoadScript(\"vega-embed\", \"6\"))\n",
+       "        .catch(showError)\n",
+       "        .then(() => displayChart(vegaEmbed));\n",
+       "    }\n",
+       "  })({\"config\": {\"view\": {\"continuousWidth\": 400, \"continuousHeight\": 300}, \"title\": {\"color\": \"#394c1e\", \"font\": \"Times New Roman\", \"fontSize\": 20}}, \"data\": {\"name\": \"data-25f7ec44d4a812eb86e3c212f7419863\"}, \"mark\": \"point\", \"encoding\": {\"color\": {\"condition\": {\"field\": \"group\", \"type\": \"nominal\", \"selection\": \"selector062\"}, \"value\": \"lightgray\"}, \"tooltip\": {\"field\": \"team\", \"type\": \"nominal\"}, \"x\": {\"axis\": {\"title\": \"global offense\"}, \"field\": \"global_o\", \"type\": \"quantitative\"}, \"y\": {\"axis\": {\"title\": \"global defense\"}, \"field\": \"global_d\", \"type\": \"quantitative\"}}, \"selection\": {\"selector062\": {\"type\": \"interval\"}, \"selector063\": {\"type\": \"interval\", \"bind\": \"scales\", \"encodings\": [\"x\", \"y\"]}}, \"title\": \"Global defense and offense per country\", \"$schema\": \"https://vega.github.io/schema/vega-lite/v4.17.0.json\", \"datasets\": {\"data-25f7ec44d4a812eb86e3c212f7419863\": [{\"team\": \"Brazil\", \"group\": \"G\", \"global_o\": 3.0621, \"global_d\": 0.23656, \"spi\": 93.48139}, {\"team\": \"Spain\", \"group\": \"E\", \"global_o\": 2.84092, \"global_d\": 0.33577, \"spi\": 90.62031}, {\"team\": \"France\", \"group\": \"D\", \"global_o\": 3.03006, \"global_d\": 0.45553, \"spi\": 90.1491}, {\"team\": \"Portugal\", \"group\": \"H\", \"global_o\": 2.81564, \"global_d\": 0.51015, \"spi\": 87.55187}, {\"team\": \"Argentina\", \"group\": \"C\", \"global_o\": 2.48839, \"global_d\": 0.42171, \"spi\": 86.02625}, {\"team\": \"England\", \"group\": \"B\", \"global_o\": 2.54769, \"global_d\": 0.48612, \"spi\": 85.40758}, {\"team\": \"Germany\", \"group\": \"E\", \"global_o\": 3.15327, \"global_d\": 0.60378, \"spi\": 88.86004}, {\"team\": \"Netherlands\", \"group\": \"A\", \"global_o\": 2.59307, \"global_d\": 0.56564, \"spi\": 84.3837}, {\"team\": \"Croatia\", \"group\": \"F\", \"global_o\": 2.30506, \"global_d\": 0.57143, \"spi\": 80.87388}, {\"team\": \"Ecuador\", \"group\": \"A\", \"global_o\": 1.93859, \"global_d\": 0.56118, \"spi\": 75.81562}, {\"team\": \"Denmark\", \"group\": \"D\", \"global_o\": 2.14044, \"global_d\": 0.61433, \"spi\": 77.67855}, {\"team\": \"Switzerland\", \"group\": \"G\", \"global_o\": 2.0892, \"global_d\": 0.61069, \"spi\": 77.00154}, {\"team\": \"Morocco\", \"group\": \"F\", \"global_o\": 1.90939, \"global_d\": 0.57595, \"spi\": 74.98677}, {\"team\": \"Uruguay\", \"group\": \"H\", \"global_o\": 2.08567, \"global_d\": 0.50822, \"spi\": 79.28334}, {\"team\": \"Belgium\", \"group\": \"F\", \"global_o\": 2.39434, \"global_d\": 0.69623, \"spi\": 79.43852}, {\"team\": \"Poland\", \"group\": \"C\", \"global_o\": 1.84231, \"global_d\": 0.77859, \"spi\": 68.95006}, {\"team\": \"Iran\", \"group\": \"B\", \"global_o\": 1.78397, \"global_d\": 0.72133, \"spi\": 69.25599}, {\"team\": \"USA\", \"group\": \"B\", \"global_o\": 1.91623, \"global_d\": 0.68239, \"spi\": 72.55486}, {\"team\": \"Senegal\", \"group\": \"A\", \"global_o\": 1.88325, \"global_d\": 0.64005, \"spi\": 73.00354}, {\"team\": \"Japan\", \"group\": \"E\", \"global_o\": 1.98526, \"global_d\": 0.68384, \"spi\": 73.67885}, {\"team\": \"Serbia\", \"group\": \"G\", \"global_o\": 2.19758, \"global_d\": 0.78677, \"spi\": 74.7218}, {\"team\": \"Mexico\", \"group\": \"C\", \"global_o\": 1.79005, \"global_d\": 0.59636, \"spi\": 72.44435}, {\"team\": \"Australia\", \"group\": \"D\", \"global_o\": 1.61996, \"global_d\": 0.86734, \"spi\": 62.44587}, {\"team\": \"Saudi Arabia\", \"group\": \"C\", \"global_o\": 1.65981, \"global_d\": 0.91933, \"spi\": 62.01155}, {\"team\": \"South Korea\", \"group\": \"H\", \"global_o\": 1.84149, \"global_d\": 0.71967, \"spi\": 70.34955}, {\"team\": \"Ghana\", \"group\": \"H\", \"global_o\": 1.59883, \"global_d\": 0.92909, \"spi\": 60.50179}, {\"team\": \"Tunisia\", \"group\": \"D\", \"global_o\": 1.54964, \"global_d\": 0.67071, \"spi\": 65.92204}, {\"team\": \"Wales\", \"group\": \"B\", \"global_o\": 1.6696, \"global_d\": 0.79776, \"spi\": 65.1679}, {\"team\": \"Costa Rica\", \"group\": \"E\", \"global_o\": 1.27862, \"global_d\": 0.94276, \"spi\": 52.89792}, {\"team\": \"Cameroon\", \"group\": \"G\", \"global_o\": 1.69585, \"global_d\": 0.84762, \"spi\": 64.47548}, {\"team\": \"Canada\", \"group\": \"F\", \"global_o\": 1.97761, \"global_d\": 0.7711, \"spi\": 71.52045}, {\"team\": \"Qatar\", \"group\": \"A\", \"global_o\": 1.43718, \"global_d\": 1.29612, \"spi\": 48.45657}]}}, {\"mode\": \"vega-lite\"});\n",
+       "</script>"
+      ],
+      "text/plain": [
+       "alt.Chart(...)"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "source = df_do_group\n",
+    "\n",
+    "brush = alt.selection(type='interval')\n",
+    "\n",
+    "points = alt.Chart(source).mark_point().encode(\n",
+    "    #x='global_o:Q',\n",
+    "    x=alt.X('global_o:Q', axis=alt.Axis(title='global offense')), # new title axis\n",
+    "    #y='global_d:Q',\n",
+    "    y=alt.Y('global_d:Q', axis=alt.Axis(title='global defense')), # new title axis\n",
+    "    color=alt.condition(brush, 'group:N', alt.value('lightgray')),\n",
+    "    tooltip='team' # when hovering --> shows team name\n",
+    ").add_selection(\n",
+    "    brush\n",
+    ").properties(\n",
+    "    title='Global defense and offense per country'\n",
+    ").interactive()\n",
+    "\n",
+    "points.configure_title(color='#394c1e', font='Times New Roman', fontSize=20) # configuring color, font and size of title"
    ]
   }
  ],
