--- a/notebooks/04-data-exploration.ipynb
+++ b/notebooks/04-data-exploration.ipynb
@@ -1639,9 +1639,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Interactive scatter plot: Defense and offense per country\n",
+    "### Interactive grouped scatter plot: Defense and offense per country\n",
     "\n",
-    "The interactive scatter plot shows the correlation between the gobal defense and offense of each country. Hovering over a point shows the name of the team."
+    "The interactive scatter plot shows the correlation between the gobal defense (y) and offense (x) of each country. They are grouped by the groups for the 2022 World Cup. Hovering over a point shows the name of the team.\n",
+    "\n",
+    "The scatter plot is commonly used to show the relationship between (numeric) variables. The categorial variable is used to group the points, indicated by their color."
    ]
   },
   {
